[metadata]
name = schema-markdown
version = 1.2.11
url = https://github.com/craigahobbs/schema-markdown
author = Craig A. Hobbs
author_email = craigahobbs@gmail.com
license = MIT
description = A schema definition and validation library
long_description = file:README.md
long_description_content_type = text/markdown
keywords = schema, validate, json
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Utilities

[options]
packages = schema_markdown
package_dir =
    = src
